config-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: config-service
  namespace: cse474-prod
spec:
  type: ClusterIP
  selector:
    app: config-service
  ports:
    - port: 3031
      targetPort: 3031
