config-service/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: config-service-ingress
  namespace: cse474-prod
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: config.cse474.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: config-service
                port:
                  number: 3031
